--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "knex": "^2.3.0",
+    "knex-paginate": "^3.0.2",
+    "mysql": "^2.18.1",
+    "nest-knexjs": "0.0.12",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
