--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "dotenv": "^16.0.3",
     "knex": "^2.3.0",
     "knex-paginate": "^3.0.2",
     "mysql": "^2.18.1",
