--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "knex": "^2.3.0",
     "knex-paginate": "^3.0.2",
